feature: 团队空间基本功能